added viewFault.php which returns the MySQL data to a HTML table

--- a/public_html/login.html
+++ b/public_html/login.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             <h1>Login Page</h1>
             <p>Please enter your username and password:</p>
 
-            <form action="dbLogin.php" method="post">
+            <form action="Login.php" method="post">
                 <div class="form-group">
                     <label for="username">Username: </label>
                     <input class="form-control" type="text" size="20" maxlength="15" name="username">
